added cards display on table